@@ -6,6 +6,10 @@ Improvements
 - net: split the EDNS buffer size into upstream and downstream (!1026)
 - lua-http doh: answer to /dns-query endpoint as well as /doh (!1069)
 
+Bugfixes
+--------
+- fix SERVFAIL when forwarding and certain CNAME setup (#614, !1070)
+
 
 Knot Resolver 5.1.3 (2020-09-08)
 ================================
